---------------------------------------------------------------------------------------------------
Version: 5.3.8
Date: ????
  Changes:
    - Removed blue as a status indicator: Yellow button background means items are being delivered, red means no items are available/being delivered.
    - Minor changes to scrollbars to prevent the width of the gui changing
  Bugfixes:
    - Fixed crash when removing a preset via Spidertron and resaving it with the same name
---------------------------------------------------------------------------------------------------
Version: 5.3.7
Date: 2020-12-06
  Bugfixes:
    - Fixed crash with invalid status display
---------------------------------------------------------------------------------------------------
Version: 5.3.6
Date: 2020-12-02
  Bugfixes:
    - Fixed crash when importing presets via blueprint string
---------------------------------------------------------------------------------------------------
Version: 5.3.5
Date: 2020-11-30
  Changes:
    - Added a "Trash unrequested" button to the spidertron gui:
        It will set every unrequested item to a maximum amount of 0 in the spidertrons logistics tab.
    - If requested amount and maximum amount are the same, only one number is shown in the gui
    - Increased performance when dealing with a lot of configured items
    - The gui for the spidertron is only shown for spidertrons with a logistics tab
    - Added a delete button to the spidertron gui. Note that this will also delete the preset in the characters gui.
  Bugfixes:
    - Fixed crash when trying to save a preset via the spidertron and the character gui was invalid
    - Fixed sprites for the pin and reset button
---------------------------------------------------------------------------------------------------
Version: 5.3.4
Date: 2020-11-29
  Changes:
    - Fixed error when trying to export a preset with no items set