@@ -69,6 +69,12 @@ empty-config=Autotrash configuration is empty.
 auto-import=Imported configuration from the character UI.
 invalid-index=Invalid index
 
+[at-commands]
+import=- Import logistic requests from the vanilla gui
+reset=- Reset the gui
+compress=- Remove empty rows in the logistics configuration
+insert_row=<number> - Insert an empty row after row #<number>
+
 [controls]
 autotrash_pause=Pause Autotrash
 autotrash_pause_requests=Pause Requests
